convert to dexscreener wrapper

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/*.test.ts"]
+    "testMatch": [
+      "**/*.test.ts"
+    ]
   },
   "repository": {
     "type": "git",
